--- a/nvme_sles15_sp6.adoc
+++ b/nvme_sles15_sp6.adoc
@@ -821,7 +821,7 @@ DHHC-
 
 == Configure Transport Layer Security
 
-Beginning with ONTAP 9.15.1, you can configure Transport Layer Security (TLS) 1.3 using the CLI and a configured pre-shared key (PSK). TLS provides secure end-to-end encryption for NVMe connections between NVMe/TCP hosts and an ONTAP array.
+Beginning with ONTAP 9.16.1, you can configure Transport Layer Security (TLS) 1.3 using the CLI and a configured pre-shared key (PSK). TLS provides secure end-to-end encryption for NVMe connections between NVMe/TCP hosts and an ONTAP array.
 
 
 .Steps
@@ -848,6 +848,8 @@ NVMeTLSkey-1:01:dNcby017axByCko8GivzOO9zGlgHDXJCN6KLzvYoA+NpT1uD:
 # nvme check-tls-key --identity=1 --subsysnqn=nqn.2014-08.org.nvmexpress:uuid:ffa0c815-e28b-4bb1-8d4c-7c6d5e610bf --keydata=NVMeTLSkey-1:01:dNcby017axByCko8GivzOO9zGlgHDXJCN6KLzvYoA+NpT1uD: --insert
 Inserted TLS key 22152a7e
 ----
++
+NOTE: The PSK shows as "NVMe1R01" because it uses "identity v1" from the TLS handshake algorithm. Identity v1 is the only version that ONTAP supports.
 
 . Verify that the TLS PSK is inserted correctly:
 +
@@ -855,8 +857,6 @@ Inserted TLS key 22152a7e
 # cat /proc/keys | grep NVMe
 22152a7e I--Q---     1 perm 3b010000     0     0 psk       NVMe1R01 nqn.2014-08.org.nvmexpress:uuid:ffa0c815-e28b-4bb1-8d4c-7c6d5e610bfc nqn.1992-08.com.netapp:sn.1d59a6b2416b11ef9ed5d039ea50acb3:subsystem.sles15 UoP9dEfvuCUzzpS0DYxnshKDapZYmvA0/RJJ8JAqmAo=: 32
 ----
-+
-NOTE: The PSK shows as "NVMe1R01" because it uses "identity v1" from the TLS handshake algorithm. This is the only version that ONTAP supports.
 
 . Connect to the ONTAP subsystem using the inserted TLS PSK:
 +
