--- a/nvme_sles15_sp6.adoc
+++ b/nvme_sles15_sp6.adoc
@@ -48,11 +48,12 @@ You can configure NVMe/FC for Broadcom/Emulex FC or Marvell/Qlogic FC adapters.
 .Steps
 . Verify that you are using the recommended adapter model:
 +
+[source,cli]
 ----
 cat /sys/class/scsi_host/host*/modelname
 ----
 +
-*Example output*:
+.Example output
 +
 ----
 LPe32002 M2
@@ -65,7 +66,7 @@ LPe32002-M2
 cat /sys/class/scsi_host/host*/modeldesc
 ----
 +
-*Example output*:
+.Example output
 +
 ----
 Emulex LightPulse LPe32002-M2 2-Port 32Gb Fibre Channel Adapter 
@@ -73,11 +74,12 @@ Emulex LightPulse LPe32002-M2 2-Port 32Gb Fibre Channel Adapter
 ----
 . Verify that you are using the recommended Emulex host bus adapter (HBA) firmware versions:
 +
+[source,cli]
 ----
 cat /sys/class/scsi_host/host*/fwrev 
 ----
 +
-*Example output*:
+.Example output
 +
 ----
 14.2.673.40, sli-4:2:c
@@ -85,22 +87,24 @@ cat /sys/class/scsi_host/host*/fwrev
 ----
 . Verify that you are using the recommended LPFC driver version:
 +
+[source,cli]
 ----
 cat /sys/module/lpfc/version
 ----
 +
-*Example output*:
+.Example output
 +
 ----
 0:14.4.0.1
 ----
 . Verify that you can view your initiator ports:
 +
+[source,cli]
 ----
 cat /sys/class/fc_host/host*/port_name
 ----
 +
-*Example output*:
+.Example output
 +
 ----
 0x10000090fae0ec88
@@ -108,11 +112,12 @@ cat /sys/class/fc_host/host*/port_name
 ----
 . Verify that your initiator ports are online:
 +
+[source,cli]
 ----
 cat /sys/class/fc_host/host*/port_state 
 ----
 +
-*Example output*:
+.Example output
 +
 ----
 Online
@@ -120,6 +125,7 @@ Online
 ----
 . Verify that the NVMe/FC initiator ports are enabled and that the target ports are visible:
 +
+[source,cli]
 ----
 cat /sys/class/scsi_host/host*/nvme_info
 ----
@@ -163,11 +169,12 @@ The native inbox qla2xxx driver included in the SUSE Linux Enterprise Server 15 
 .Steps
 . Verify that you are running the supported adapter driver and firmware versions:
 +
+[source,cli]
 ----
 cat /sys/class/fc_host/host*/symbolic_name 
 ----
 +
-*Example output*:
+.Example output
 +
 ----
 QLE2742 FW:v9.14.01 DVR: v10.02.09.200-k
@@ -175,8 +182,12 @@ QLE2742 FW:v9.14.01 DVR: v10.02.09.200-k
 ----
 . Verify that the `ql2xnvmeenable` parameter is set to 1:
 +
+[source,cli]
 ----
 cat /sys/module/qla2xxx/parameters/ql2xnvmeenable
+----
++
+----
 1
 ----
 --
@@ -301,7 +312,7 @@ sectype: none
 nvme discover -t tcp -w <host-traddr> -a <traddr>
 ----
 +
-*Example output:*
+.Example output
 +
 ----
 #nvme discover -t tcp -w 192.168.111.79 -a 192.168.111.66 
@@ -312,11 +323,12 @@ nvme discover -t tcp -w <host-traddr> -a <traddr>
 
 . Run the `nvme connect-all` command across all the supported NVMe/TCP initiator-target LIFs across the nodes:
 +
+[source,cli]
 ----
 nvme connect-all -t tcp -w host-traddr -a traddr
 ----
 +
-*Example output:*
+.Example output
 +
 ----
 # nvme connect-all -t tcp -w 192.168.111.79 -a 192.168.111.66  
@@ -336,18 +348,24 @@ Use the following procedure to validate NVMe-oF.
 
 . Verify that in-kernel NVMe multipath is enabled:
 +
+[source,cli]
 ----
 cat /sys/module/nvme_core/parameters/multipath
+----
++
+.Expected output
+----
 Y
 ----
 
 . Verify that the host has the correct controller model for the ONTAP NVMe namespaces:
 +
+[source,cli]
 ----
 cat /sys/class/nvme-subsystem/nvme-subsys*/model 
 ----
 +
-*Example output:*
+.Example output
 +
 ----
 NetApp ONTAP Controller
@@ -356,11 +374,12 @@ NetApp ONTAP Controller
 
 . Verify the NVMe I/O policy for the respective ONTAP NVMe I/O controller:
 +
+[source,cli]
 ----
 cat /sys/class/nvme-subsystem/nvme-subsys*/iopolicy 
 ----
 +
-*Example output:*
+.Example output
 +
 ----
 round-robin
@@ -369,11 +388,12 @@ round-robin
 
 . Verify that the ONTAP namespaces are visible to the host:
 +
+[source,cli]
 ----
 nvme list -v 
 ----
 +
-*Example output:*
+.Example output
 +
 ----
 Subsystem        Subsystem-NQN                                                                         Controllers
@@ -401,10 +421,14 @@ nvme list-subsys /dev/<subsystem_name>
 ====
 .NVMe/FC 
 --
-*Example output*
+.Example output
 [subs=+quotes]
+[source,cli]
 ----
-# nvme list-subsys /dev/nvme2n1
+nvme list-subsys /dev/nvme2n1
+----
+.Example output
+----
 nvme-subsys2 - NQN=nqn.1992-
 08.com.netapp:sn.06303c519d8411eea468d039ea36a106:subs
 ystem.nvme
@@ -419,10 +443,15 @@ ystem.nvme
 --
 .NVMe/TCP 
 --
-*Example output*
+.Example output
 [subs=+quotes]
+[source,cli]
 ----
-# nvme list-subsys
+nvme list-subsys
+----
+
+.Example output
+----
 nvme-subsys1 - NQN=nqn.1992-08.com.netapp:sn.8b5ee9199ff411eea468d039ea36a106:subsystem.nvme_tcp_1
  hostnqn=nqn.2014-08.org.nvmexpress:uuid:4c4c4544-0035-5910-804b-b2c04f444d33
  iopolicy=round-robin
@@ -441,8 +470,10 @@ nvme-subsys1 - NQN=nqn.1992-08.com.netapp:sn.8b5ee9199ff411eea468d039ea36a106:su
 ====
 .Column
 --
+[source,cli]
 `nvme netapp ontapdevices -o column`
-*Example output*: 
+
+.Example output 
 ----
 Device           Vserver    Namespace Path                       NSID UUID                                   Size      
 ---------------- ---------- ------------------------------------ ------------------------------------------- --------
@@ -451,9 +482,11 @@ Device           Vserver    Namespace Path                       NSID UUID      
 ----
 --
 .JSON
+[source,cli]
 --
 `nvme netapp ontapdevices -o json`
-*Example output*:
+
+.Example output
 ----
 {
 "ONTAPdevices":[
@@ -590,7 +623,7 @@ sectype: none
 nvme discover -t <trtype> -w <host-traddr> -a <traddr> -p
 ----
 +
-*Example output:*
+.Example output
 +
 ----
 nvme discover -t tcp -w 192.168.111.79 -a 192.168.111.666 -p
@@ -602,14 +635,14 @@ nvme discover -t tcp -w 192.168.111.79 -a 192.168.111.666 -p
 vserver nvme show-discovery-controller -instance -vserver <vserver_name>
 ----
 +
-*Example output:*
+.Example output
 +
 [subs=+quotes]
 ----
 vserver nvme show-discovery-controller -instance -vserver vs_nvme79
 Vserver Name: vs_CLIENT116 Controller ID: 00C0h
-Discovery Subsystem NQN: nqn.1992-
-08.com.netapp:sn.48391d66c0a611ecaaa5d039ea165514:discovery Logical Interface UUID: d23cbb0a-c0a6-11ec-9731-d039ea165abc Logical Interface:
+Discovery Subsystem NQN: *nqn.1992-*
+*08.com.netapp:sn.48391d66c0a611ecaaa5d039ea165514:discovery* Logical Interface UUID: d23cbb0a-c0a6-11ec-9731-d039ea165abc Logical Interface:
 CLIENT116_lif_4a_1
 Node: A400-14-124
 Host NQN: nqn.2014-08.org.nvmexpress:uuid:12372496-59c4-4d1b-be09-74362c0c1afc
@@ -635,10 +668,13 @@ You can set up secure in-band authentication using the CLI or a config JSON file
 .Steps
 . Obtain the host NQN:
 +
+[source,cli]
 ----
 cat /etc/nvme/hostnqn
 ----
-. Generate the dhchap key for the SUSE Linux Enterprise Server 15 SP6 host:
+. Generate the dhchap key for the SUSE Linux Enterprise Server 15 SP6 host.
++
+The following example shows the descriptions of the command paramters:
 +
 ----
 nvme gen-dhchap-key -s optional_secret -l key_length {32|48|64} -m HMAC_function {0|1|2|3} -n host_nqn 
@@ -669,11 +705,12 @@ nvme connect -t tcp -w <host-traddr> -a <tr-addr> -n <host_nqn> -S <authenticati
 +
 .. Verify the host dhchap keys:
 +
+[source,cli]
 ----
-$cat /sys/class/nvme-subsystem/<nvme-subsysX>/nvme*/dhchap_secret
+cat /sys/class/nvme-subsystem/<nvme-subsysX>/nvme*/dhchap_secret
 ----
 +
-*Example output for unidirectional configuration:*
+.Example output for a unidirectional configuration
 +
 ----
 # cat /sys/class/nvme-subsystem/nvme-subsys1/nvme*/dhchap_secret
@@ -685,11 +722,12 @@ DHHC-1:03:je1nQCmjJLUKD62mpYbzlpuw0OIws86NB96uNO/t3jbvhp7fjyR9bIRjOHg8wQtye1JCFS
 +
 .. Verify the controller dhchap keys:
 +
+[source,cli]
 ----
-$cat /sys/class/nvme-subsystem/<nvme-subsysX>/nvme*/dhchap_ctrl_secret
+cat /sys/class/nvme-subsystem/<nvme-subsysX>/nvme*/dhchap_ctrl_secret
 ----
 +
-*Example output for bidirectional configuration:*
+.Example output for a bidirectional configuration
 +
 ----
 # cat /sys/class/nvme-subsystem/nvme-subsys6/nvme*/dhchap_ctrl_secret
@@ -769,11 +807,12 @@ In the preceding example, `dhchap_key` corresponds to `dhchap_secret` and `dhcha
 
 . Connect to the ONTAP controller using the config JSON file:
 +
+[source,cli]
 ----
 nvme connect-all -J /etc/nvme/config.json
 ----
 +
-*Example output*:
+.Example output
 +
 ----
 traddr=192.168.111.66 is already connected
@@ -793,11 +832,12 @@ traddr=192.168.111.67 is already connected
 +
 .. Verify the host dhchap keys:
 +
+[source,cli]
 ----
-# cat /sys/class/nvme-subsystem/nvme-subsys0/nvme0/dhchap_secret
+cat /sys/class/nvme-subsystem/nvme-subsys0/nvme0/dhchap_secret
 ----
 +
-*Example output:*
+.Example output
 +
 ----
 DHHC-1:01:NunEWY7AZlXqxITGheByarwZdQvU4ebZg9HOjIr6nOHEkxJg:
@@ -805,11 +845,12 @@ DHHC-1:01:NunEWY7AZlXqxITGheByarwZdQvU4ebZg9HOjIr6nOHEkxJg:
 +
 .. Verify the controller dhchap keys:
 +
+[source,cli]
 ----
-# cat /sys/class/nvme-subsystem/nvme-subsys0/nvme0/dhchap_ctrl_secret
+cat /sys/class/nvme-subsystem/nvme-subsys0/nvme0/dhchap_ctrl_secret
 ----
 +
-*Example output:*
+.Example output
 +
 ----
 DHHC-
@@ -823,15 +864,25 @@ DHHC-
 TLS provides secure end-to-end encryption for NVMe connections between NVMe/TCP hosts and an ONTAP array.Beginning with ONTAP 9.16.1, you can configure Transport Layer Security (TLS) 1.3 using the CLI and a configured pre-shared key (PSK). 
 
 .Steps
-. Check that you have the following ktls-utils, openssl, and libopenssl packages installed on the host: 
+. Check that you have the following ktls-utils, openssl, and libopenssl packages installed on the host using the following commands: 
 +
+[source,cli]
 ----
-# rpm -qa | grep ktls
+rpm -qa | grep ktls
+----
++
+.Example output
+----
 ktls-utils-0.10+12.gc3923f7-150600.1.2.x86_64
 ----
 +
+[source,cli]
 ----
-# rpm -qa | grep ssl
+rpm -qa | grep ssl
+----
++
+.Example output
+----
 openssl-3-3.1.4-150600.5.7.1.x86_64
 libopenssl1_1-1.1.1w-150600.5.3.1.x86_64
 libopenssl3-3.1.4-150600.5.7.1.x86_64
@@ -839,7 +890,10 @@ libopenssl3-3.1.4-150600.5.7.1.x86_64
 
 . Verify that you have the correct setup for `/etc/tlshd.conf`:
 +
-# cat /etc/tlshd.conf
+[source,cli]
+----
+cat /etc/tlshd.conf
+----
 +
 .Example output
 [%collapsible]
@@ -865,15 +919,18 @@ nl=0
 
 . Enable tlshd to start at system boot:
 +
-`# systemctl enable tlshd`
+[source,cli]
+`systemctl enable tlshd`
 
 . Verify that the tlshd daemon is running:
 +
-`# systemctl status tlshd`
+[source,cli]
+`systemctl status tlshd`
 +
 .Example output
 [%collapsible]
 ====
+----
 tlshd.service - Handshake service for kernel TLS consumers
    Loaded: loaded (/usr/lib/systemd/system/tlshd.service; enabled; preset: disabled)
    Active: active (running) since Wed 2024-08-21 15:46:53 IST; 4h 57min ago
@@ -884,26 +941,45 @@ Main PID: 961 (tlshd)
    CGroup: /system.slice/tlshd.service
        └─961 /usr/sbin/tlshd
 Aug 21 15:46:54 RX2530-M4-17-153 tlshd[961]: Built from ktls-utils 0.11-dev on Mar 21 2024 12:00:00
+----
 ====
 . Generate the TLS PSK by using the `nvme gen-tls-key`:
 +
+[source,cli]
 ----
-# cat /etc/nvme/hostnqn
+cat /etc/nvme/hostnqn
+----
++
+.Example output
+----
 nqn.2014-08.org.nvmexpress:uuid:e58eca24-faff-11ea-8fee-3a68dd3b5c5f
-# nvme gen-tls-key --hmac=1 --identity=1 --subsysnqn=nqn.1992-08.com.netapp:sn.1d59a6b2416b11ef9ed5d039ea50acb3:subsystem.sles15
+----
++
+[source,cli]
+----
+nvme gen-tls-key --hmac=1 --identity=1 --subsysnqn=nqn.1992-08.com.netapp:sn.1d59a6b2416b11ef9ed5d039ea50acb3:subsystem.sles15
+----
++
+.Example output
+----
 NVMeTLSkey-1:01:dNcby017axByCko8GivzOO9zGlgHDXJCN6KLzvYoA+NpT1uD:
 ----
 
 . Add the TLS PSK to the ONTAP subsystem:
 +
+[source,cli]
 ----
-::*> nvme subsystem host add -vserver sles15_tls -subsystem sles15 -host-nqn nqn.2014-08.org.nvmexpress:uuid:ffa0c815-e28b-4bb1-8d4c-7c6d5e610bfc -tls-configured-psk NVMeTLSkey-1:01:dNcby017axByCko8GivzOO9zGlgHDXJCN6KLzvYoA+NpT1uD:
-  (vserver nvme subsystem host add)
+nvme subsystem host add -vserver sles15_tls -subsystem sles15 -host-nqn nqn.2014-08.org.nvmexpress:uuid:ffa0c815-e28b-4bb1-8d4c-7c6d5e610bfc -tls-configured-psk NVMeTLSkey-1:01:dNcby017axByCko8GivzOO9zGlgHDXJCN6KLzvYoA+NpT1uD:
 ----
 . Insert the TLS PSK into the host kernel keyring:
 +
+[source,cli]
 ----
-# nvme check-tls-key --identity=1 --subsysnqn=nqn.2014-08.org.nvmexpress:uuid:ffa0c815-e28b-4bb1-8d4c-7c6d5e610bf --keydata=NVMeTLSkey-1:01:dNcby017axByCko8GivzOO9zGlgHDXJCN6KLzvYoA+NpT1uD: --insert
+nvme check-tls-key --identity=1 --subsysnqn=nqn.2014-08.org.nvmexpress:uuid:ffa0c815-e28b-4bb1-8d4c-7c6d5e610bf --keydata=NVMeTLSkey-1:01:dNcby017axByCko8GivzOO9zGlgHDXJCN6KLzvYoA+NpT1uD: --insert
+----
++
+.Example output
+----
 Inserted TLS key 22152a7e
 ----
 +
@@ -911,17 +987,34 @@ NOTE: The PSK shows as "NVMe1R01" because it uses "identity v1" from the TLS han
 
 . Verify that the TLS PSK is inserted correctly:
 +
+[source,cli]
 ----
-# cat /proc/keys | grep NVMe
+cat /proc/keys | grep NVMe
+----
++
+.Example output
+----
 22152a7e I--Q---     1 perm 3b010000     0     0 psk       NVMe1R01 nqn.2014-08.org.nvmexpress:uuid:ffa0c815-e28b-4bb1-8d4c-7c6d5e610bfc nqn.1992-08.com.netapp:sn.1d59a6b2416b11ef9ed5d039ea50acb3:subsystem.sles15 UoP9dEfvuCUzzpS0DYxnshKDapZYmvA0/RJJ8JAqmAo=: 32
 ----
 
 . Connect to the ONTAP subsystem using the inserted TLS PSK:
 +
+[source,cli]
 ----
-# nvme connect -t tcp -w 20.20.10.80 -a 20.20.10.14 -n nqn.1992-08.com.netapp:sn.1d59a6b2416b11ef9ed5d039ea50acb3:subsystem.sles15 --tls_key=0x22152a7e --tls
+nvme connect -t tcp -w 20.20.10.80 -a 20.20.10.14 -n nqn.1992-08.com.netapp:sn.1d59a6b2416b11ef9ed5d039ea50acb3:subsystem.sles15 --tls_key=0x22152a7e --tls
+----
++
+.Example output
+----
 connecting to device: nvme0
-# nvme list-subsys
+----
++
+----
+nvme list-subsys
+----
++
+.Example output
+----
 nvme-subsys0 - NQN=nqn.1992-08.com.netapp:sn.1d59a6b2416b11ef9ed5d039ea50acb3:subsystem.sles15
                hostnqn=nqn.2014-08.org.nvmexpress:uuid:ffa0c815-e28b-4bb1-8d4c-7c6d5e610bfc
                iopolicy=round-robin
@@ -930,7 +1023,7 @@ nvme-subsys0 - NQN=nqn.1992-08.com.netapp:sn.1d59a6b2416b11ef9ed5d039ea50acb3:su
 ----
 . Add the target, and verify the TLS connection to the specified ONTAP subsystem:
 +
-`::*> nvme subsystem controller show -vserver sles15_tls -subsystem sles15 -instance`
+`nvme subsystem controller show -vserver sles15_tls -subsystem sles15 -instance`
 +
 .Example output
 [%collapsible]
