--- a/_include/hu/reuse_hu_recommended_settings.adoc
+++ b/_include/hu/reuse_hu_recommended_settings.adoc
@@ -29,6 +29,10 @@ The following example determines the WWID of a device and adds it to the `multip
 +
 ----
 # /lib/udev/scsi_id -gud /dev/sda
+----
++
+.Example output
+----
 360030057024d0730239134810c0cb833
 ----
 +
