--- a/_include/hu/reuse_hu_recommended_settings.adoc
+++ b/_include/hu/reuse_hu_recommended_settings.adoc
@@ -1,6 +1,6 @@
-The `multipath.conf` file must exist for the multipath daemon to start. If this file does not exist, you can create an empty, zero-byte file by using the following command:  
+The `multipath.conf` file must exist for the multipath daemon to start. If this file doesn't exist, you can create an empty, zero-byte file by using the `touch /etc/multipath.conf` command:  
 
-`touch /etc/multipath.conf`
+
 
 The first time you create the `multipath.conf` file, you might need to enable and start the multipath services by using the following commands:
 
@@ -49,6 +49,6 @@ blacklist {
 }
 ----
 
-You should always check your `/etc/multipath.conf` file for legacy settings, especially in the defaults section, that might be overriding the default settings.
+You should always check your `/etc/multipath.conf, especially in the defaults section, for legacy settings that might be overriding the default settings.
 
 The following table demonstrates the critical `multipathd` parameters for ONTAP LUNs and the required values. If a host is connected to LUNs from other vendors and any of these parameters are overridden, they must be corrected by later stanzas in the `multipath.conf` file that apply specifically to ONTAP LUNs. Without this correction, the ONTAP LUNs might not work as expected. You should only override these defaults in consultation with NetApp, the OS vendor, or both, and only when the impact is fully understood.
