--- a/nvme_sles15_sp6.adoc
+++ b/nvme_sles15_sp6.adoc
@@ -35,11 +35,11 @@ For additional details on supported configurations, see the link:https://mysuppo
 
 * SAN booting using the NVMe-oF protocol is currently not supported.
 
-* The host utility support isn't available for NVMe-oF on an SUSE Linux Enterprise Server 15 SP6 host because there's no `sanlun` support for NVMe-oF. Instead, you can use the NetApp plug-in included in the native `nvme-cli` package for all NVMe-oF transports.
+* The host utility support isn't available for NVMe-oF on an SUSE Linux Enterprise Server 15 SP6 host because there's no `sanlun` support for NVMe-oF. Instead, you can rely on the NetApp plug-in included in the native `nvme-cli` package for all NVMe-oF transports.
 
 == Configure NVMe/FC
 
-You can configure NVMe/FC for Broadcom/Emulex FC or Marvell/Qlogic FC adapters.
+You can configure NVMe/FC for Broadcom/Emulex FC or Marvell/Qlogic FC adapters a for SUSE Linux Enterprise Server 15 SP6 with ONTAP configuration.
 
 [role="tabbed-block"]
 =====
@@ -161,6 +161,8 @@ FCP CMPL: xb 0000082d Err 000283bb
 .Marvell/QLogic
 --
 The native inbox qla2xxx driver included in the SUSE Linux Enterprise Server 15 SP6 kernel has the latest fixes. These fixes are essential for ONTAP support. 
+
+Configure NVMe/FC for a Marvell/QLogic adapter.
 
 .Steps
 . Verify that you are running the supported adapter driver and firmware versions:
@@ -366,7 +368,7 @@ Beginning with SUSE Linux Enterprise Server 15 SP6, the default setting for the 
 
 == Validate NVMe-oF
 
-Use the following procedure to validate NVMe-oF.
+Use the following procedure to validate NVMe-oF for a SUSE Linux Enterprise Server 15 SP6 with ONTAP configuration.
 
 .Steps
 
@@ -698,6 +700,7 @@ You can set up secure in-band authentication using the CLI or a config JSON file
 [role="tabbed-block"]
 =====
 .CLI
+Set up secure in-band authentication using the CLI. 
 --
 .Steps
 . Obtain the host NQN:
@@ -897,7 +900,7 @@ DHHC-
 
 == Configure Transport Layer Security
 
-TLS provides secure end-to-end encryption for NVMe connections between NVMe/TCP hosts and an ONTAP array.Beginning with ONTAP 9.16.1, you can configure Transport Layer Security (TLS) 1.3 using the CLI and a configured pre-shared key (PSK). 
+TLS provides secure end-to-end encryption for NVMe connections between NVMe-oF hosts and an ONTAP array in a SUSE Linux Enterprise Server 15 SP6 with ONTAP configuration. Beginning with ONTAP 9.16.1, you can configure Transport Layer Security (TLS) 1.3 using the CLI and a configured pre-shared key (PSK). 
 
 .Steps
 . Check that you have the following ktls-utils, openssl, and libopenssl packages installed on the host: 
