--- a/_include/windows/reuse_windows_booting_OS.adoc
+++ b/_include/windows/reuse_windows_booting_OS.adoc
@@ -1,2 +1,2 @@
 
-There are two options for booting the operating system: by using either local boot or SAN boot. For local booting, you install the OS on the local hard disk (SSD, SATA, RAID, and so on). For SAN booting, see instructions below.
+You can boot the operating system by using a local or SAN boot. For a local boot, you install the OS on the local hard disk (SSD, SATA, RAID, and so on). If you opt to use a SAN boot, it must be supported by your configuration.
